--- a/templates/kube-vip/workloads/kube-vip/base/application/daemonset.yaml.j2
+++ b/templates/kube-vip/workloads/kube-vip/base/application/daemonset.yaml.j2
@@ -76,6 +76,7 @@ spec:
               add:
                 - NET_ADMIN
                 - NET_RAW
+                - SYS_TIME
       hostNetwork: true
       serviceAccountName: kube-vip
       tolerations:
