include volumeSnapshotClass example

--- a/templates/democratic_csi_iscsi/applications/democratic_csi_iscsi.yaml.j2
+++ b/templates/democratic_csi_iscsi/applications/democratic_csi_iscsi.yaml.j2
@@ -64,6 +64,14 @@ spec:
             controller-expand-secret:
 
         volumeSnapshotClasses: []
+        #  - name: freenas-iscsi-csi
+        #    labels:
+        #      velero.io/csi-volumesnapshot-class: "true"
+        #    parameters:
+        #    # if true, snapshots will be created with zfs send/receive
+        #    detachedSnapshots: "true"
+        #    secrets:
+        #      snapshotter-secret:
 
         driver:
           existingConfigSecret: democratic-csi-iscsi-driver-config
