Change Grafana to StatefulSet

--- a/templates/prometheus-op/applications/prometheus-op.yaml.j2
+++ b/templates/prometheus-op/applications/prometheus-op.yaml.j2
@@ -284,6 +284,10 @@ spec:
         grafana:
           fullnameOverride: "grafana"
           enabled: true
+
+          revisionHistoryLimit: 3
+          useStatefulSet: true
+
           rbac:
             pspEnabled: false
 
