--- a/templates/longhorn/workloads/traefik-config/longhorn_traefik_ingress_route.yaml.j2
+++ b/templates/longhorn/workloads/traefik-config/longhorn_traefik_ingress_route.yaml.j2
@@ -1,7 +1,7 @@
 ---
 {% if install.longhorn.dashboard.create_route|default(false)|bool == true%}
 
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
   namespace: {{install.longhorn.namespace}}
@@ -13,7 +13,7 @@ spec:
     forceSlash: true
 
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   namespace: {{install.longhorn.namespace}}
