--- a/templates/traefik/workloads/traefik-config/traefik_common_middleware.yaml.j2
+++ b/templates/traefik/workloads/traefik-config/traefik_common_middleware.yaml.j2
@@ -4,7 +4,7 @@
 ---
 # Middleware will compress stream back to client with GZIP.
 
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
   name: compress
@@ -15,7 +15,7 @@ spec:
 ---
 # Shared Basic Authentication
 
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
   name: traefik-basic-auth
@@ -27,7 +27,7 @@ spec:
 ---
 # Enable X Forwarded HTTPS Protocol
 
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
   name: x-forward-https-headers
