--- a/templates/traefik/workloads/traefik-config/traefik_dashboard.yaml.j2
+++ b/templates/traefik/workloads/traefik-config/traefik_dashboard.yaml.j2
@@ -1,7 +1,7 @@
 ---
 {% if install.traefik.dashboard.create_route|default(false)|bool == true%}
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: traefik-dashboard
