--- a/templates/user-files/democratic_csi/test-app-nfs-claim.yaml.j2
+++ b/templates/user-files/democratic_csi/test-app-nfs-claim.yaml.j2
@@ -132,7 +132,7 @@ spec:
     app: nginx-pv-blue
 
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
   name: nginx-strip-path-prefix
@@ -142,7 +142,7 @@ spec:
       - /nginx
 
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: test-claim-ingressroute
