--- a/templates/user-files/traefik/traefik/traefik_test_apps.yaml.j2
+++ b/templates/user-files/traefik/traefik/traefik_test_apps.yaml.j2
@@ -39,7 +39,7 @@ spec:
     app: whoami
 
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: simpleingressroute
@@ -55,7 +55,7 @@ spec:
       port: 80
 
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: ingressroutetls
