--- a/templates/upgrade-controller/workloads/upgrade-controller/app/kustomization.yaml.j2
+++ b/templates/upgrade-controller/workloads/upgrade-controller/app/kustomization.yaml.j2
@@ -19,7 +19,7 @@ patchesStrategicMerge:
     apiVersion: v1
     kind: Namespace
     metadata:
-      name: system-upgrade
+      name: {{install.upgrade_controller.namespace}}
 
 labels:
   - pairs:
